--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -15396,6 +15396,39 @@ text set in mono-spaced font will use ~DejaVu Sans Mono~ regardless of
 the language. The mono-spaced text will be scaled to match the default
 font size and produce a better-looking output.
 
+You can add an optional ~:provide~ property to any language mapping
+except the default mapping. The ~:provide~ property is a string and
+will generate a
+
+#+begin_example
+\babelprovide[provide]{lang}
+#+end_example
+
+line with additional configuration when needed. For example:
+
+#+BEGIN_SRC emacs-lisp :results none :exports code
+(setq org-latex-babel-font-config
+      '((nil
+         :fonts (("rm" :font "FreeSerif")))
+        ("pt"
+         :fonts (("rm" :font "DejaVu Sans"))
+         :provide "onchar=ids fonts")))
+#+END_SRC
+
+will generate the following LaTeX code:
+
+#+BEGIN_SRC latex :results none :exports code
+\usepackage[portuguese,greek]{babel}
+\babelprovide[onchar=ids fonts]{portuguese}
+\usepackage{unicode-math}
+\babelfont{rm}{FreeSerif}
+\babelfont[portuguese]{rm}{DejaVu Sans}
+#+END_SRC
+
+to set a document in Greek and Portuguese using the ~DejaVu Sans~ font
+for the Portuguese text and ~FreeSerif~ for Greek.
+
+
 ** Markdown Export
 :PROPERTIES:
 :DESCRIPTION: Exporting to Markdown.
