--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14248,54 +14248,9 @@ general options (see [[*Export Settings]]).
 
   The strategy to handle multi-lingual features.  Possible values
   are ~nil~, ~"fontspec"~, "~"polyglossia"~ or ~"babel"~.
+  See more details about setting up multi-language documents in the
+  [[*Handling different languages in LaTeX exports]] section.
 
-  When this variable is nil (default), the LaTeX language features
-  need to be configured manually, specifying appropriate LaTeX headers
-  (see ~#+LATEX_HEADER~ keyword).  For convenience, if the LaTeX
-  headers load =babel= or =polyglossia=, you can use word =AUTO= in
-  the package options to automatically specify the document's main
-  language according to Org's =#+LANGUAGE= keyword:
-
-  #+BEGIN_EXAMPLE
-#+LANGUAGE: es
-#+LATEX_HEADER: \usepackage[AUTO]{babel}
-  #+END_EXAMPLE
-  #+texinfo: @noindent
-  would tell LaTeX to use the ~babel~ package to create a document
-  with Spanish headers.
-
-  When =#+LATEX_MULTI_LANG= is set to ~fontspec~, Org mode will
-  configure the font defaults using LaTeX's ~fontspec~ package.  Note
-  that ~fontspec~ can configure the fonts either globally (for all the
-  languages used in the document), or for different character sets
-  (for example, ~emoji~, ~han~, ~kana~).  See [[#lualatex-fontspec]]
-  for more details.  Beware that ~fontspec~ does not work with
-  =pdflatex= compiler.  We recommend using =lualatex= or =xelatex= for
-  reliable non-latin language support.
-
-  When =#+LATEX_MULTI_LANG= is either ~babel~ or ~polyglossia~, Org mode
-  will configure the corresponding LaTeX package to handle
-  multi-language support.  The =LANGUAGE= option will be used to determine
-  the main and secondary languages. For example:
-
-  #+BEGIN_SRC org :results none :exports code
-,#+LANGUAGE: fr de es
-,#+LATEX_MULTI_LANG: polyglossia
-  #+END_SRC
-  #+texinfo: @noindent
-  sets multi-language handling to use =polyglossia= in a document, where
-  the main language (i.e. header, figure, table names) and typesetting
-  options use French and there are passages in German and Spanish.
-
-  ~babel~ and ~polyglossia~ should be used for non-English documents.
-  Both provide setting up the fonts, including setting them up on a
-  per-language basis.
-
-  See [[#lualatex-polyglossia]] and [[#babel-fontconfig]] for more
-  details about ~babel~ and ~polyglossia~ configuration.  Note that
-  ~polyglossia~ does not work with =pdflatex= compiler.  We recommend
-  using =lualatex= or =xelatex= for reliable non-latin language
-  support.
 
 - =KEYWORDS= ::
 
@@ -14304,7 +14259,7 @@ general options (see [[*Export Settings]]).
   #+vindex: org-latex-title-command
   The keywords for the document.  The description along with author
   name, keywords, and related file metadata are inserted in the output
-  file by the hyperref package.  See ~org-latex-hyperref-template~ for
+  file by the =hyperref= package.  See ~org-latex-hyperref-template~ for
   customizing metadata items.  See ~org-latex-title-command~ for
   typesetting description into the document's front matter.  Use
   multiple =KEYWORDS= lines if necessary.
@@ -14393,27 +14348,80 @@ A sample Org file with the above headers:
 #+cindex: @samp{LANGUAGE}, keyword
 #+vindex: org-export-default-language
 
-The LaTeX export backend can handle non-English and multiple-language
-documents using the LaTeX packages =babel= or =polyglossia=.
-The document languages should be specified using =LANGUAGE= keyword.
-If =LANGUAGE= is not specified, the value of ~org-export-default-language~ is used.
+  The LaTeX export backend can handle non-English and
+  multiple-language documents using the LaTeX packages =babel= or
+  =polyglossia=.  The document languages should be specified using
+  =LANGUAGE= keyword.  If =LANGUAGE= is not specified, the value of
+  ~org-export-default-language~ is used.
 
-For example, consider an Org document written using Polytonic Greek
-with some parts written in French:
-#+begin_example
+  When this variable is nil (default), the LaTeX language features
+  need to be configured manually, specifying appropriate LaTeX headers
+  (see ~#+LATEX_HEADER~ keyword).  For convenience, if the LaTeX
+  headers load =babel= or =polyglossia=, you can use word =AUTO= in
+  the package options to automatically specify the document's main
+  language according to Org's =#+LANGUAGE= keyword:
+
+  #+BEGIN_EXAMPLE
+#+LANGUAGE: es
+#+LATEX_HEADER: \usepackage[AUTO]{babel}
+  #+END_EXAMPLE
+  #+texinfo: @noindent
+  would tell LaTeX to use the ~babel~ package to create a document
+  with Spanish headers.
+
+  When =#+LATEX_MULTI_LANG= is set to ~fontspec~, Org mode will
+  configure the document's fonts using LaTeX's ~fontspec~ package.
+  Note that ~fontspec~ does not support document localisation. It
+  configures the fonts used in the document. It distinguishes between
+  the main, sans and monotype fonts, and can provide fallbacks for
+  character sets (for example, ~emoji~, ~han~, ~kana~, etc.) not
+  supported by the default fonts.  See [[#lualatex-fontspec]] for more
+  details.  Beware that ~fontspec~ does not work with =pdflatex=
+  compiler.  We recommend using =lualatex= or =xelatex= for reliable
+  non-latin language support.
+
+  When =#+LATEX_MULTI_LANG= is either ~babel~ or ~polyglossia~, Org
+  mode will use the indicated LaTeX package to handle multi-language
+  support.  The =LANGUAGE= option will be used to determine the main
+  and secondary languages. For example:
+
+  #+BEGIN_SRC org :results none :exports code
+,#+LANGUAGE: fr de es
+,#+LATEX_MULTI_LANG: polyglossia
+  #+END_SRC
+  #+texinfo: @noindent
+  sets multi-language handling to use =polyglossia= in a document, where
+  the main language (i.e. header, figure, table names) and typesetting
+  options use French and there are passages in German and Spanish.
+
+  ~babel~ and ~polyglossia~ should be used for non-English documents.
+  Both provide setting up the fonts, including setting them up on a
+  per-language basis.
+
+  See [[#lualatex-polyglossia]] and [[#babel-fontconfig]] for more
+  details about ~babel~ and ~polyglossia~ configuration.  Note that
+  ~polyglossia~ does not work with =pdflatex= compiler.  We recommend
+  using =lualatex= or =xelatex= for reliable non-latin language
+  support.
+
+  # TODO: Consider removing this. This can be treated further down...
+
+  For example, consider an Org document written using Polytonic Greek
+  with some parts written in French:
+  #+begin_example
 ,#+LANGUAGE: el-polyton fr
 ,#+LATEX_MULTI_LANG: polyglossia
-#+end_example
-#+texinfo: @noindent
-The above snippet will make Org mode use =polyglossia= LaTeX package
-with Polytonic Greek as the primary language (used for standard names
-like "Table of Contents", "Table", "Figure", etc), and French as the
-secondary language.
+  #+end_example
+  #+texinfo: @noindent
+  The above snippet will make Org mode use =polyglossia= LaTeX package
+  with Polytonic Greek as the primary language (used for standard names
+  like "Table of Contents", "Table", "Figure", etc), and French as the
+  secondary language.
 
 # TODO: We should describe how to mark snippets in other # language in
 # Org.
 
-This would produce in LaTeX (with the actual =polyglossia= syntax):
+  This would produce in LaTeX (with the actual =polyglossia= syntax):
 
 #+begin_example
 \usepackage{polyglossia}
@@ -14421,23 +14429,23 @@ This would produce in LaTeX (with the actual =polyglossia= syntax):
 \setotherlanguage{french}
 #+end_example
 
-If you use =polyglossia=, you can control the fonts used for different
-languages in the PDF output with the variable
-~org-latex-polyglossia-font-config~.
-#+vindex: org-latex-polyglossia-font-config
+  If you use =polyglossia=, you can control the fonts used for
+  different languages in the PDF output with the variable
+  ~org-latex-polyglossia-font-config~.
+  #+vindex: org-latex-polyglossia-font-config
 
-If you use =babel=, you can control the fonts used for different
-languages in the PDF output with the variable
-~org-latex-babel-font-config~.
+  If you use =babel=, you can control the fonts used for different
+  languages in the PDF output with the variable
+  ~org-latex-babel-font-config~.
 
-In general, when exporting to LaTeX or PDF, we recommend
-using a Unicode font set that covers the scripts you use in your
-document. This will simplify the font configuration.
+  In general, when exporting to LaTeX or PDF, we recommend
+  using a Unicode font set that covers the scripts you use in your
+  document. This will simplify the font configuration.
 
-When ~org-latex-multi-lang~ is ~nil~, the first language in the
-=LANGUAGE= keyword (or the value of ~org-export-default-language~ if
-it is not used) will replace appearances of the string ~"AUTO"~ when
-importing ~babel~ or ~polyglossia~ with a ~#+LATEX_HEADER:~ keyword.
+  When ~org-latex-multi-lang~ is ~nil~, the first language in the
+  =LANGUAGE= keyword (or the value of ~org-export-default-language~ if
+  it is not used) will replace appearances of the string ~"AUTO"~ when
+  importing ~babel~ or ~polyglossia~ with a ~#+LATEX_HEADER:~ keyword.
 
 # For example:
 
